Clean backend code and deploy to lamda functions
